Fixed scrollbar bug
Fixed the bug where the scrollbar would appear on pages that didnt have
content that filled the page. Now the pages will appear fill properly
without being scrolled.

--- a/css/forms.css
+++ b/css/forms.css
@@ -15,6 +15,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 p{
 	color:#6c6c6c;
