--- a/css/list.css
+++ b/css/list.css
@@ -96,7 +96,7 @@ html{	height: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;}
-h1{color:#888;text-align: center;}
+h1{margin: 0; color:#888;text-align: center;}
 body{
 	height: 100%;
 	width: 100%;
