--- a/css/notification.css
+++ b/css/notification.css
@@ -1,13 +1,20 @@
 /* notification */ 
-html{height: 100%;}
+html{  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;}
 h1{color:#888;text-align: center;}
 body{
-    height:100%;   
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
     background: -webkit-linear-gradient(left top, #BBDEFB, #B0C4DE) fixed; /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(bottom right,#BBDEFB, #B0C4DE) fixed; /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(bottom right, #BBDEFB, #B0C4DE) fixed; /* For Firefox 3.6 to 15 */
     background: linear-gradient(to bottom right,  #BBDEFB, #B0C4DE) fixed; /* Standard syntax */
     font-family: Helvetica, san-sarif;
+	overflow: hidden;
 }
 
 hr{display:block; border-style: block; margin:0px; border-width: 1px; border-color:#EOFFFF;}
